I think I fixed the weird mobile overflow thing?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ section.hero
   width: 100%;
   margin: 20px;
   outline-offset: -2px;
+  min-width: 0px;
 }
 
 #about p{
